Completed list view for nodes

--- a/RPG_Notes/MainWindow.xaml
+++ b/RPG_Notes/MainWindow.xaml
@@ -5,18 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RPG_Notes" xmlns:usercontrols="clr-namespace:RPG_Notes.UserControls"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="500" Width="900">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="100" />
-            <RowDefinition />
-        </Grid.RowDefinitions>
-
         <Grid.ColumnDefinitions>
+            <ColumnDefinition />
             <ColumnDefinition />
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
 
-        <usercontrols:TitleNote Placeholder="First List" />
+        <usercontrols:ListNotesView />
     </Grid>
 </Window>
