--- a/RPG_Notes/MainWindow.xaml
+++ b/RPG_Notes/MainWindow.xaml
@@ -5,14 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RPG_Notes" xmlns:usercontrols="clr-namespace:RPG_Notes.UserControls"
         mc:Ignorable="d"
-        Title="MainWindow" Height="500" Width="900">
+        Title="MainWindow" Height="500" Width="330">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition />
-            <ColumnDefinition />
-            <ColumnDefinition />
-        </Grid.ColumnDefinitions>
-
-        <usercontrols:ListNotesView />
+        <usercontrols:ListListsNotesView />
     </Grid>
 </Window>
