--- a/RPG_Notes/UserControls/ListNotesView.xaml
+++ b/RPG_Notes/UserControls/ListNotesView.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:RPG_Notes.UserControls" d:DataContext="{d:DesignInstance Type=local:ListNotesView}"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="500" d:DesignWidth="300" MinWidth="300">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="100" />
@@ -15,6 +15,7 @@
         <local:TitleNote x:Name="TitleNote" />
 
         <ListView x:Name="lvNotes" Grid.Row="1" ItemsSource="{Binding Notes.Notes}"
-                  FontSize="18" Background="Transparent" />
+                  FontSize="18" Background="Transparent"
+                  ScrollViewer.VerticalScrollBarVisibility="Visible" />
     </Grid>
 </UserControl>
