--- a/RPG_Notes/UserControls/ListNotesView.xaml
+++ b/RPG_Notes/UserControls/ListNotesView.xaml
@@ -5,17 +5,17 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:RPG_Notes.UserControls" d:DataContext="{d:DesignInstance Type=local:ListNotesView}"
              mc:Ignorable="d" 
-             d:DesignHeight="500" d:DesignWidth="300" MinWidth="300">
+             d:DesignHeight="500" d:DesignWidth="400" MinWidth="400">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="100" />
             <RowDefinition />
         </Grid.RowDefinitions>
 
-        <local:TitleNote x:Name="TitleNote" />
+        <local:TitleNote x:Name="TitleNote" Margin="2 0 0 0" />
 
-        <ListView x:Name="lvNotes" Grid.Row="1" ItemsSource="{Binding Notes.Notes}"
-                  FontSize="18" Background="Transparent"
-                  ScrollViewer.VerticalScrollBarVisibility="Visible" />
+        <ListView x:Name="lvNotes" Grid.Row="1" FontSize="18" ItemsSource="{Binding Notes.Notes}"
+                  Background="Transparent" BorderThickness="0"
+                  ScrollViewer.VerticalScrollBarVisibility="Hidden" />
     </Grid>
 </UserControl>
