--- a/RPG_Notes/UserControls/TitleNote.xaml
+++ b/RPG_Notes/UserControls/TitleNote.xaml
@@ -7,38 +7,45 @@
              mc:Ignorable="d" 
              d:DesignHeight="100" d:DesignWidth="400">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="0.5*" />
-            <RowDefinition Height="0.5*"/>
-        </Grid.RowDefinitions>
+        <local:ListSetting x:Name="lsPanel" Panel.ZIndex="1" Height="90" Width="100"
+                           HorizontalAlignment="Right" Margin="0 -10 25 0"
+                           Visibility="Hidden" />
 
         <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition />
-                <ColumnDefinition Width="25" />
-            </Grid.ColumnDefinitions>
-            
-            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center"
-                   Text="{Binding ListNotes.ListInfo.Name}" FontSize="28"></TextBlock>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="0.5*" />
+                <RowDefinition Height="0.5*"/>
+            </Grid.RowDefinitions>
 
-            <Grid Grid.Column="1">
-                <Grid.RowDefinitions>
-                    <RowDefinition />
-                    <RowDefinition />
-                </Grid.RowDefinitions>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="25" />
+                </Grid.ColumnDefinitions>
 
-                <Button x:Name="btnSetting" Content="⚙️" FontSize="20"
-                        VerticalContentAlignment="Top" HorizontalContentAlignment="Left"
-                        Background="Transparent" BorderBrush="Transparent" Padding="0"
-                        Margin="-4, -4, -4, -3" Click="btnSetting_Click" />
+                <TextBlock x:Name="tbTitleText" FontSize="28"
+                           Text="{Binding ListNotes.ListInfo.Name}"
+                           HorizontalAlignment="Center" VerticalAlignment="Center" />
 
-                <Button x:Name="btnReload" Grid.Row="1" Content="🔄️" FontSize="20"
-                        VerticalContentAlignment="Top" HorizontalContentAlignment="Left"
-                        Background="Transparent" BorderBrush="Transparent" Padding="0" Margin="-4"
-                        Panel.ZIndex="-1" Click="btnReload_Click" />
+                <Grid Grid.Column="1">
+                    <Grid.RowDefinitions>
+                        <RowDefinition />
+                        <RowDefinition />
+                    </Grid.RowDefinitions>
+
+                    <Button x:Name="btnSetting" Content="⚙️" FontSize="20"
+                            VerticalContentAlignment="Top" HorizontalContentAlignment="Left"
+                            Background="Transparent" BorderBrush="Transparent" Padding="0"
+                            Margin="-4, -4, -4, -3" Click="btnSetting_Click" />
+
+                    <Button x:Name="btnReload" Grid.Row="1" Content="🔄️" FontSize="20"
+                            VerticalContentAlignment="Top" HorizontalContentAlignment="Left"
+                            Background="Transparent" BorderBrush="Transparent" Padding="0" Margin="-4"
+                            Panel.ZIndex="-1" Click="btnReload_Click" />
+                </Grid>
             </Grid>
-        </Grid>
 
-        <local:EnterNote x:Name="EnterNote" Grid.Row="1" />
+            <local:EnterNote x:Name="EnterNote" Grid.Row="1" />
+        </Grid>
     </Grid>
 </UserControl>
